Fixed CS-858 Right Popup on a message is broken in Firefox3

--- a/eXoApplication/mail/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/eXoApplication/mail/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -31,13 +31,14 @@
 .UIWindow .UIEmpty {
 	margin: 0px;
 	border: none ;
-	min-width: none ;
+	min-width: 0px ;
 }
 
 .UIEmpty {
 	background: none;
 	border: none;
 	margin: 0px;
+	min-width: 0px ;
 }
 /******************************************** MailBanner ****************************************/
 
